
This file shows the changes in recent releases of MODx. The most current release is usually the 
development release, and is only shown to give an idea of what's currently in the pipeline.


MODx 0.9.5 RC2 (rev 1929 - Nov 6, 2006)
====================================
* [FS#634] Order permission groups alphabetically when editing/creating a web user. (1928)
* [FS#655] Wrong lang string showing for locked items in the 'Manage Resource' section - amended so locked items use the generic 'locked' lang string. (1927)
* [FS#512] Recommit doc parser changes re mySQL 4.1.21 and document sorting. (1926)
* DocManager: Remove references to modx.js and cb2.js. (1910, 1911)
* Added constants to represent global path variables and make use in places where potential remote file inclusion points exist. (1922)
* Fixed potential remote file inclusion point in install/instprocessor.php. (1922)
* [FS#648] Increased character length of zip and state to 25 max to better accomodate non-US locations (1920)
* [FS#651] Increased character length of menu title and alias field to 255 max (1919)
* Modified context menu to use prototype vs. WebFX (1918)
* Increased character length of page title field to 255 max (1917)
* Move action button trigger to onclick for better IE7 compatibility (1916)
* [FS#650] fixed corrupting widget properties frombad javascript loop (1914)
* Replaced sortable table items in manager to remove WebFX dependency (1913)
* Added note regarding regiseter_globals setting to README (1911)
* Fix for imporant potential security issue for servers with register_globals set to ON -- makes File Browser only usable with manager sessions (1907)
* [FS#646] Fix issue with non-auto-refreshing tree and other warnings resulting from removing webelm.js by adding prototype to header.inc.php (1905)
* Enable spellcheck for Firefox 2 on content editing pages and add opera to READM file as a "good manager client" (1904)