@@ -2,9 +2,9 @@
 /*####
 #
 #	Name: PHx (Placeholders Xtended)
-#	Version: 1.4.4
+#	Version: 1.5.0
 #	Author: Armand "bS" Pondman (apondman@zerobarrier.nl)
-#	Date: Oct 29, 2006 11:25 CET
+#	Date: Nov 07, 2006 01:25 CET
 #
 ####*/
 
@@ -17,7 +17,7 @@ class PHxParser {
 	function PHxParser($debug=0) {
 		global $modx;
 		$this->name = "PHx";
-		$this->version = "1.4.4";
+		$this->version = "1.5.0";
 		$this->user["mgrid"] = intval($_SESSION['mgrInternalKey']);
 		$this->user["usrid"] = intval($modx->getLoginUserID());
 		$this->user["id"] = ($this->user["usrid"] > 0 ) ? (-$this->user["usrid"]) : $this->user["mgrid"];
@@ -50,20 +50,18 @@ class PHxParser {
 	
 	function ParseValues($template='',$pass=50) {
 		global $modx;
-    
+		
 		// MODx Chunks
 		$template = $modx->mergeChunkContent($template);
-		
-		// MODx Snippets
-    $template = $modx->evalSnippets($template);
-		
+	
 		// PHx / MODx Tags
-		if ( preg_match_all('~\[(\+|\*|\()([^:\+\[\]]+)([^\[]*?)(\1|\))\]~s',$template, $matches) && $pass ) {
-			
+		if ( preg_match_all('~\[(\[|\!|\+|\*|\()([^:\+\[\]]+)([^\[\]]*?)(\1|\)|\])\]~s',$template, $matches) && $pass ) {
+
 			//$matches[0] // Complete string that's need to be replaced
 			//$matches[1] // Type
 			//$matches[2] // The placeholder(s)
 			//$matches[3] // The modifiers
+			//$matches[4] // Type (end character)
 			
 			// Debugging
 			if ($this->showDebug) {
@@ -78,24 +76,36 @@ class PHxParser {
 			$var_search = array();
 			$var_replace = array();
 			for($i=0; $i<$count; $i++) {
+				$replace = NULL;
 				$match = $matches[0][$i];
 				$type = $matches[1][$i];
+				$type_end = $matches[4][$i];
 				$input = $matches[2][$i];
 				$modifiers = $matches[3][$i];
 				$this->Log("Parsing variable '" . $input . "' of type '" . $type . "'");
 				$var_search[] = $match;
 					switch($type) {
-						case "*": // Document / Template Variable
+						// Document / Template Variable eXtended
+						case "*":
 							$input = $modx->mergeDocumentContent("[*".$input."*]");
+							$replace = $this->Filter($input,$modifiers);
 							break;
-						case "(": // MODx Setting
+						// MODx Setting eXtended
+						case "(": 
 							$input = $modx->mergeSettingsContent("[(".$input.")]");
+							$replace = $this->Filter($input,$modifiers);
 							break;
-						default:  // Placeholder / PHx
+						// MODx Snippet Default (can't be eXtended)
+						case "[": case "!": 
+							$replace = $modx->evalSnippets($match);
+							break;
+						// MODx Placeholder eXtended
+						default:  
 							$input = $this->getPHxVariable($input);
+							$replace = $this->Filter($input,$modifiers);
    						break;
 					}
-					$var_replace[] = $this->Filter($input,$modifiers);
+					$var_replace[] = $replace;
 			 }
 			 $template = $this->ParseValues(str_replace($var_search, $var_replace, $template),$pass-1);
 		}
